testsuite/bsc.interra/messages/EBadLexChar/EBadLexChar1.bs.bsc-out.expected
checking package dependencies
Error: "EBadLexChar1.bs", line 26, column 8: (P0000)
  Bad Char literal
